# autoware_adapi_msgs

./: .pre-commit-config.yaml  README.md
.github/: CODEOWNERS  sync-files.yaml
.github/workflows/: build-and-test-differential.yaml  build-and-test.yaml  bump-new-version.yaml  comment-on-pr.yaml  github-release.yaml  pre-commit-optional.yaml  release-new-version-when-merged.yaml  spell-check-differential.yaml  sync-files.yaml  update-codeowners-from-packages.yaml
autoware_adapi_v1_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
autoware_adapi_v1_msgs/common/msg/: Shape.msg  Shape2D.msg
autoware_adapi_v1_msgs/cooperation/msg/: CooperationDecision.msg  CooperationRequest.msg  CooperationResponse.msg  CooperationStatus.msg  CooperationStatusArray.msg  CooperationTarget.msg
autoware_adapi_v1_msgs/cooperation/srv/: CooperationCommand.srv  SetCooperationDecisions.srv
autoware_adapi_v1_msgs/geometry/: shape.md
autoware_adapi_v1_msgs/geometry/msg/: Shape.msg
autoware_adapi_v1_msgs/localization/srv/: InitializeLocalization.srv
autoware_adapi_v1_msgs/manual/msg/: AccelCommand.msg  AccelerationCommand.msg  GearCommand.msg  HazardLightsCommand.msg  ManualControlMode.msg  ManualControlModeStatus.msg  ManualOperatorHeartbeat.msg  PedalCommand.msg  PedalsCommand.msg  SteerCommand.msg  SteeringCommand.msg  TurnIndicatorsCommand.msg  VelocityCommand.msg
autoware_adapi_v1_msgs/manual/srv/: ListManualControlMode.srv  SelectManualControlMode.srv
autoware_adapi_v1_msgs/motion/srv/: AcceptStart.srv
autoware_adapi_v1_msgs/operation_mode/msg/: OperationModeState.msg
autoware_adapi_v1_msgs/operation_mode/srv/: ChangeOperationMode.srv
autoware_adapi_v1_msgs/perception/msg/: DynamicObject.msg  ObjectClassification.msg  ObjectKinematics.msg  PredictedObject.msg  PredictedObjectKinematics.msg  PredictedObjects.msg  PredictedPath.msg  Shape.msg
autoware_adapi_v1_msgs/planning/msg/: ControlPoint.msg  CooperationDecision.msg  CooperationDefault.msg  CooperationPolicy.msg  CooperationStatus.msg  CooperationStatusArray.msg  DetectArea.msg  DetectAreaArray.msg  PlanningArea.msg  PlanningAreaArray.msg  PlanningBehavior.msg  PlanningConstraints.msg  PlanningConstraintsArray.msg  PlanningFactor.msg  PlanningFactorArray.msg  PlanningSequence.msg  SteeringFactor.msg  VelocityFactor.msg
autoware_adapi_v1_msgs/planning/srv/: GetCooperationDefault.srv  GetCooperationDefaults.srv  GetCooperationPolicies.srv  SetCooperationCommands.srv  SetCooperationDefault.srv  SetCooperationDefaults.srv  SetCooperationPolicies.srv  SetPlanningConstraints.srv
autoware_adapi_v1_msgs/routing/msg/: RouteOption.msg
autoware_adapi_v1_msgs/routing/srv/: SetRoute.srv  SetRoutePoints.srv
autoware_adapi_v1_msgs/system/msg/: DiagGraphStatus.msg  DiagGraphStruct.msg  DiagLeafStatus.msg  DiagLeafStruct.msg  DiagLinkStruct.msg  DiagNodeStatus.msg  Heartbeat.msg  MRMState.msg  MrmDescription.msg  MrmRequest.msg  MrmRequestList.msg  MrmState.msg  RtiState.msg
autoware_adapi_v1_msgs/system/srv/: ListMrmDescription.srv  SendMrmRequest.srv
autoware_adapi_v1_msgs/vehicle/msg/: DoorCommand.msg  DoorGroup.msg  DoorLayout.msg  DoorStatus.msg  FuelLevel.msg  Gear.msg  GeoPointStamped.msg  HazardLight.msg  Kinematic.msg  TurnIndicator.msg  VehicleDimensions.msg  VehicleDoor.msg  VehicleDoorStatus.msg  VehicleGear.msg  VehicleHazardLight.msg  VehicleId.msg  VehicleKinematics.msg  VehicleMetrics.msg  VehicleMotion.msg  VehiclePosition.msg  VehicleSignal.msg  VehicleSpecs.msg  VehicleState.msg  VehicleStatus.msg  VehicleTurnIndicator.msg
autoware_adapi_v1_msgs/vehicle/srv/: GetDoorLayout.srv  GetVehicleIds.srv  GetVehicleSpecs.srv  SetDoorCommand.srv
autoware_adapi_version_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
